# pipeformer

./: .gitlab-ci.yml  CHANGELOG  Dockerfile  README.md  cli.py  find_changed_config.sh  pyproject.toml  requirements.txt
compute/dbaas/: prime.yaml
compute/iskander/: minio.yaml  updated.yaml
compute/sna/: awesome.yaml  machine.yaml  minio.yaml  nikita-p.yaml  nikiting.yaml  saveliy.yaml  with-playbook.yaml  zabbix.yaml
compute/some-project/: awesome-compute-instance.yaml  helloworld.yaml
compute/tolmachd/: test.yaml
src/: __main__.py  settings.py
src/integrations/grafana/: wrapper.py
src/integrations/timeweb/: dto.py  wrapper.py
src/integrations/vault/: extractor.py
src/integrations/zabbix/: wrapper.py
src/services/: utils.py
src/services/configuration/: dto.py  service.py
src/services/provision/: dto.py  service.py
src/services/validation/: dto.py  service.py
tests/: test_validation.py
tests/presets/configs/invalid/: missing_field.yaml  missing_variable_field.yaml  wrong_cpucores.yaml  wrong_diskspace.yaml  wrong_os.yaml  wrong_playbook_link.yaml  wrong_region.yaml  wrong_ssh.yaml  wrong_variable_name.yaml
tests/presets/configs/valid/: valid.yaml
