[tool.poetry]
name = "pipeformer"
version = "0.1.0"
description = ""
authors = ["wensiet <wensietyt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
sentry-sdk = "^2.0.1"
paramiko = "^3.4.0"
ansible = "^9.5.1"
gitpython = "^3.1.43"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
